# atlas-seaorm

./: Cargo.toml  README.md  atlasutil.py  example.hcl
migration/: Cargo.toml
migration/atlas/down/: 20231129085922_create_user_table.sql  20231129090020_create_manager_table.sql  20231129090105_add_foreign_key.sql  20231129090211_set_nonnull.sql  20231130041058_create_user_table.sql  20231130041259_create_manager_table.sql  20231130041439_add_foreign_key.sql  20231130041529_set_nonnull.sql  schema-20231129085922_create_user_table.sql
migration/atlas/up/: 20231129085922_create_user_table.sql  20231129090020_create_manager_table.sql  20231130041439_add_foreign_key.sql  20231130041529_set_nonnull.sql  atlas.sum
migration/src/: lib.rs  m20231129_085922_create_user_table.rs  m20231129_090020_create_manager_table.rs  m20231129_090036_seed_data.rs  m20231129_090105_add_foreign_key.rs  m20231129_090123_set_manager_id.rs  m20231129_090211_set_nonnull.rs  m20231130_041058_create_user_table.rs  m20231130_041259_create_manager_table.rs  m20231130_041352_seed_data.rs  m20231130_041439_add_foreign_key.rs  m20231130_041446_set_manager_id.rs  m20231130_041529_set_nonnull.rs
migration/src/m20231129_090036_seed_data_entity/: test_manager.rs  test_user.rs
migration/src/m20231129_090123_set_manager_id_entity/: test_manager.rs  test_user.rs
migration/src/m20231130_041352_seed_data_entity/: mod.rs  prelude.rs
test-schemas/: 00.sql  01.sql  02.sql  03.sql
