[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
async-std = { version = "^1", features = ["attributes", "tokio1"] }
clap = { version = "4.4.10", features = ["derive"] }
sea-orm = { version = "0.12.3", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "mock",
    "debug-print",
] }
tracing = "0.1.40"

[dependencies.sea-orm-migration]
version = "^0.12.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
